Actions
Bug #11798
closedapix: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../../i86pc/io/apix/apix.c:623:25: error: cast between incompatible function types from 'void (*)(char *, struct regs *)' to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] if (!psm_add_nmintr(0, (avfunc) apic_nmi_intr, ^ ../../i86pc/io/hpet_acpi.c:353:33: error: cast between incompatible function types from 'uint_t (*)(char *)' {aka 'unsigned int (*)(char *)'} to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] rem_avintr(NULL, CBE_HIGH_PIL, (avfunc)&hpet_isr, ^ ../../i86pc/io/hpet_acpi.c: In function 'hpet_install_interrupt_handler': ../../i86pc/io/hpet_acpi.c:617:42: error: cast between incompatible function types from 'uint_t (*)(char *)' {aka 'unsigned int (*)(char *)'} to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] retval = add_avintr(NULL, CBE_HIGH_PIL, (avfunc)func, "HPET Timer", ^ cc1: all warnings being treated as errors
Testing done: build/install/boot.
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit d1f3e3c647f14e2496e646bb7ef0df729cbbf72a
commit d1f3e3c647f14e2496e646bb7ef0df729cbbf72a Author: Toomas Soome <tsoome@me.com> Date: 2019-11-22T18:47:42.000Z 11798 apix: cast between incompatible function types Reviewed by: John Levon <john.levon@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions