usr/src/uts/i86pc/io/pcplusmp/apic_common.c
@@ -363,17 +363,17 @@ apic_cpcovf_mask_clear(void)
 	    (apic_reg_ops->apic_read(APIC_PCINT_VECT) & ~APIC_LVT_MASK));
 }
 
-/*ARGSUSED*/
 static int
-apic_cmci_enable(xc_arg_t arg1, xc_arg_t arg2, xc_arg_t arg3)
+apic_cmci_enable(xc_arg_t arg1 __unused, xc_arg_t arg2 __unused,
+    xc_arg_t arg3 __unused)
 {
 	apic_reg_ops->apic_write(APIC_CMCI_VECT, apic_cmci_vect);
 	return (0);
 }
 
-/*ARGSUSED*/
 static int
-apic_cmci_disable(xc_arg_t arg1, xc_arg_t arg2, xc_arg_t arg3)
+apic_cmci_disable(xc_arg_t arg1 __unused, xc_arg_t arg2 __unused,
+    xc_arg_t arg3 __unused)
 {
 	apic_reg_ops->apic_write(APIC_CMCI_VECT, apic_cmci_vect | AV_MASK);
 	return (0);
@@ -497,7 +497,7 @@ apic_cpu_send_SIPI(processorid_t cpun, boolean_t start)
 
 /*ARGSUSED1*/
 int
-apic_cpu_start(processorid_t cpun, caddr_t arg)
+apic_cpu_start(processorid_t cpun, caddr_t arg __unused)
 {
 	ASSERT(MUTEX_HELD(&cpu_lock));
 
@@ -523,7 +523,7 @@ apic_cpu_start(processorid_t cpun, caddr_t arg)
  */
 /*ARGSUSED1*/
 int
-apic_cpu_stop(processorid_t cpun, caddr_t arg)
+apic_cpu_stop(processorid_t cpun, caddr_t arg __unused)
 {
 	int		rc;
 	cpu_t		*cp;
@@ -644,15 +644,13 @@ apic_get_pir_ipivect(void)
 	return (apic_pir_vect);
 }
 
-/*ARGSUSED*/
 void
-apic_set_idlecpu(processorid_t cpun)
+apic_set_idlecpu(processorid_t cpun __unused)
 {
 }
 
-/*ARGSUSED*/
 void
-apic_unset_idlecpu(processorid_t cpun)
+apic_unset_idlecpu(processorid_t cpun __unused)
 {
 }
 
@@ -805,21 +803,20 @@ gethrtime_again:
 }
 
 /* apic NMI handler */
-/*ARGSUSED*/
-void
-apic_nmi_intr(caddr_t arg, struct regs *rp)
+uint_t
+apic_nmi_intr(caddr_t arg __unused, caddr_t arg1 __unused)
 {
 	nmi_action_t action = nmi_action;
 
 	if (apic_shutdown_processors) {
 		apic_disable_local_apic();
-		return;
+		return (DDI_INTR_CLAIMED);
 	}
 
 	apic_error |= APIC_ERR_NMI;
 
 	if (!lock_try(&apic_nmi_lock))
-		return;
+		return (DDI_INTR_CLAIMED);
 	apic_num_nmis++;
 
 	/*
@@ -860,6 +857,7 @@ apic_nmi_intr(caddr_t arg, struct regs *rp)
 	}
 
 	lock_clear(&apic_nmi_lock);
+	return (DDI_INTR_CLAIMED);
 }
 
 processorid_t
@@ -1285,7 +1283,7 @@ apic_clkinit(int hertz)
  * after filesystems are all unmounted.
  */
 void
-apic_preshutdown(int cmd, int fcn)
+apic_preshutdown(int cmd __unused, int fcn __unused)
 {
 	APIC_VERBOSE_POWEROFF(("apic_preshutdown(%d,%d); m=%d a=%d\n",
 	    cmd, fcn, apic_poweroff_method, apic_enable_acpi));
@@ -1639,16 +1637,14 @@ apic_intrmap_init(int apic_mode)
 	}
 }
 
-/*ARGSUSED*/
 static void
-apic_record_ioapic_rdt(void *intrmap_private, ioapic_rdt_t *irdt)
+apic_record_ioapic_rdt(void *intrmap_private __unused, ioapic_rdt_t *irdt)
 {
 	irdt->ir_hi <<= APIC_ID_BIT_OFFSET;
 }
 
-/*ARGSUSED*/
 static void
-apic_record_msi(void *intrmap_private, msi_regs_t *mregs)
+apic_record_msi(void *intrmap_private __unused, msi_regs_t *mregs)
 {
 	mregs->mr_addr = MSI_ADDR_HDR |
 	    (MSI_ADDR_RH_FIXED << MSI_ADDR_RH_SHIFT) |
